<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    tools:context=".modual.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:fontFamily="@font/helvetica_bold"

            android:text="@string/hello"
            android:textAlignment="viewStart"
            android:textColor="@color/hello"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toTopOf="@+id/guideline18" />

        <EditText
            android:id="@+id/login_emailNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/email_number"
            android:padding="8dp"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/pwd_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_eye_off"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/password"
            android:padding="8dp"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="18sp"
            android:typeface="normal"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/login_emailNumber" />

        <include
            android:id="@+id/btn_progressBar"
            layout="@layout/progressbar_button"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

        <TextView
            android:id="@+id/txt_sign_in_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/create_a_crypto_account"
            android:textAlignment="center"
            android:textColor="@color/txt_color"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn_progressBar"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/btn_progressBar"
            app:layout_constraintTop_toBottomOf="@+id/btn_progressBar" />

        <TextView
            android:id="@+id/txt_otp_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/sky_light"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="@+id/txt_sign_in_here"
            app:layout_constraintStart_toEndOf="@+id/txt_sign_in_here"
            app:layout_constraintTop_toTopOf="@+id/txt_sign_in_here" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/txt_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintTop_toBottomOf="@+id/pwd_password" />

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/txt_color"
            android:text="@string/remember_me"

            android:textColor="@color/txt_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/pwd_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
